[package]
name = "symphony-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Symphony specific primitive data types."

[dependencies]
thiserror ={ workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parse-display = { workspace = true }

# [dev-dependencies]

# [features]

# [[bench]]